--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
   <!-- google font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Titillium+Web:wght@300&display=swap"
+    rel="stylesheet">
 
   <title>Travelz | A Tourism guide website</title>
 </head>
